plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id("io.freefair.lombok") version "9.2.0"
}

group = 'com.applicationplanner'
version = '0.0.1-SNAPSHOT'
description = 'Assignment Planner'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation "org.springframework.boot:spring-boot-starter-security"
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-database-postgresql:10.20.1'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
	implementation "com.google.api-client:google-api-client:2.7.0"
	implementation "io.jsonwebtoken:jjwt-api:0.12.6"
	implementation "com.google.http-client:google-http-client-jackson2:1.45.0"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.6"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.6"
	testImplementation "org.springframework.boot:spring-boot-starter-test"
	testImplementation "org.springframework.boot:spring-boot-starter-webmvc-test"
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
	useJUnitPlatform()
	systemProperty "spring.profiles.active", "test"
}

tasks.named('test') {
	useJUnitPlatform()
}
